test/fails/bad_casts/functions3.lgl
tag coord a is vec2;
tag coord b is vec2;

canon b f(a x) { 
    return [1., 2.];
}

canon b g(a x) { // duplicate canon functions
    return [2., 2.];
}

void main() {
    print 1;
}